# ejsb

./: .dockerignore  .gitignore  Makefile  README.md  go.mod  go.sum  main.go
asb/: ansible.cfg  asb.yml  configure.yml  provision.yml  requirements.yml  system-builder.yml
asb/machines/juniper/: junos-upgrade.yml
asb/machines/nas/: main.yml  vars.yml
asb/machines/www/: main.yml  vars.yml
asb/machines/www/templates/: domain.conf.j2  nginx.conf.j2
asb/plays/: dist-upgrade.yml  release-upgrade.yml
asb/provisioners/: linode.yml
asb/roles/builder-base/tasks/: main.yml
asb/roles/builder-base/templates/: hosts.j2
asb/roles/builder_base/defaults/: alpine.yml
asb/roles/builder_base/tasks/: alpine-tasks.yml  debian-tasks.yml  main.yml
asb/roles/builder_base/templates/: deb-testing-sources.list.j2  hosts.j2
asb/roles/gitea/defaults/: main.yml
asb/roles/gitea/tasks/: main.yml
asb/roles/global_handlers/handlers/: docker.yml  (+5 more)
backend/nr/: Dockerfile
backend/nr/nod/: main.py
backend/nr/nr_data/: nr_config.yml
be/nr/: Dockerfile  nr-requirements.txt
be/nr/src/: main.py
docs/: ASB.md  GRN.md  NRF.md
frontend/: nod.ipynb
jsonnet/: default-env.jsonnet  deployment-base.jsonnet  jsonnetfile.json  jsonnetfile.lock.json  service-base.jsonnet
jsonnet/ejsb/cilium/: announce.yaml  ip-pool.yaml  values.yaml
jsonnet/helloworld/: default.jsonnet  dev.jsonnet  integration.jsonnet  template.jsonnet
nrf/: README.md  poetry.lock.license  pyproject.toml
nrf/config/: nr_config.yml
nrf/nrf/: __init__.py  hello-main.py  main.py
nrf/tests/: test_nrf.py
(+15 files in other folders)
